--- a/main.css
+++ b/main.css
@@ -130,6 +130,11 @@ audio {
 
 dd {
   font-style: italic;
+  cursor: pointer;
+  padding-left: 60px;
+  position: relative;
+  right: 60px;
+  width: 100%;
 }
 
 dt {
@@ -141,7 +146,8 @@ dt {
   position: absolute;
   top: 1vh;
   max-height: 60vh;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
   z-index: 1;
 }
 
