--- a/main.css
+++ b/main.css
@@ -3,16 +3,24 @@
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
+#everything {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+}
+
 button {
   cursor: pointer;
-  background-color:rgba(255, 0, 0, .6);
+  background: #b70909f5;
   cursor: pointer;
-  padding: 4px;
   border: none;
   font-size: 1em;
   margin-top: 8px;
   margin-bottom: 0;
-  border-radius: 2px;
+  padding: 4px 5px;
+  color: white;
 }
 
 audio {
@@ -42,7 +50,7 @@ audio {
 #trackTime {
   width: 40vw;
   height: 7px;
-  background-color: gray;
+  background: gray;
   position: absolute;
   border-radius: 2.5px;
   left: 30vw;
@@ -70,7 +78,7 @@ audio {
   position: absolute;
   left: 0;
   height: 7px;
-  background: rgba(255, 0, 0, .5);
+  background: #b70909;
   width: 0;
   margin: 0;
   display: inline-block;
@@ -87,13 +95,13 @@ audio {
 }
 
 .playpause {
-  background-color: transparent;
+  background: transparent;
   padding: 0;
   margin: 0;
 }
 
 .getfile {
-  background-color:rgba(255, 0, 0, .5);
+  background:rgba(255, 0, 0, .5);
   cursor: pointer;
   padding: 4px;
   border: none;
@@ -111,21 +119,18 @@ audio {
   display: inline;
 }
 
-#showFile {
-  color: rgb(70, 70, 70);
-}
-
 #uploadForm [type=text] {
   display: block;
   margin-bottom: 8px;
   width: 98%;
 }
 
-#uploadPopbtn {
+#buttons {
   position: absolute;
   bottom: 1vmin;
   left: 1vmin;
   font-size: 1.2em;
+  width: calc(100vw - 1vmin);
 }
 
 dd {
@@ -144,20 +149,22 @@ dt {
 
 #songsList {
   position: absolute;
-  top: 1vh;
+  top: -13px;
+  left: 3px;
   max-height: 60vh;
   overflow-y: auto;
   overflow-x: hidden;
   z-index: 1;
 }
 
-#songsList dt:nth-child(even) {background-color: rgb(200, 200, 200);}
+.dt:nth-child(even) { background: rgb(200, 200, 200); }
+.dt[lmode=false]:nth-child(even) { background: rgb(40, 40, 40); }
+
+.dt[selected=true] {background: #b70909;}
 
 #clearall {
   position: absolute;
-  bottom: 1vh;
-  right: 1vh;
-  font-size: 1.2em;
+  right: 1vmin;
 }
 
 #popups {
@@ -173,7 +180,7 @@ dt {
   box-shadow: 6px 6px 10px black, 5px -5px 8px black, -5px 5px 8px black, -5px -5px 8px black;
   padding: 4px;
   z-index: 4;
-  background-color: white;
+  background: white;
 }
 
 #shadow {
@@ -205,4 +212,13 @@ dt {
 
 .initial {
   display: initial;
+}
+
+.reverse {
+  color: gray;
+  background: black;
+}
+
+.invert {
+  filter: invert(100%);
 }
