--- a/public/main.css
+++ b/public/main.css
@@ -3,15 +3,30 @@
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
+#everything {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+}
+
 button {
   cursor: pointer;
-  background-color:rgba(255, 0, 0, .375);
+  background: #b70909f5;
   cursor: pointer;
-  padding: 4px;
   border: none;
   font-size: 1em;
   margin-top: 8px;
   margin-bottom: 0;
+  padding: 4px 5px;
+  color: white;
+}
+
+audio {
+  width: 40vw;
+  position: absolute;
+  right: 0;
 }
 
 #center {
@@ -27,8 +42,47 @@ button {
   width: 100vw;
   left: 0;
   text-align: center;
+  align-content: center;
   position: absolute;
-  bottom: 8vh;
+  bottom: 15vh;
+}
+
+#trackTime {
+  width: 40vw;
+  height: 7px;
+  background: gray;
+  position: absolute;
+  border-radius: 2.5px;
+  left: 30vw;
+  justify-content: center;
+  cursor: pointer;
+}
+
+#timeIndicate {
+  width: 10px;
+  height: 7px;
+  background: black;
+  border-radius: 3.5px;
+  position: absolute;
+  display: inline-block;
+  margin: 0;
+  left: -7px;
+}
+
+#timeIndicate:hover {
+  height: 13px;
+  top: -3px;
+}
+
+#doneGone {
+  position: absolute;
+  left: 0;
+  height: 7px;
+  background: #b70909;
+  width: 0;
+  margin: 0;
+  display: inline-block;
+  border-radius: 3.5px;
 }
 
 #file {
@@ -41,13 +95,13 @@ button {
 }
 
 .playpause {
-  background-color: transparent;
+  background: transparent;
   padding: 0;
   margin: 0;
 }
 
 .getfile {
-  background-color:rgba(255, 0, 0, .375);
+  background:rgba(255, 0, 0, .5);
   cursor: pointer;
   padding: 4px;
   border: none;
@@ -65,25 +119,27 @@ button {
   display: inline;
 }
 
-#showFile {
-  color: rgb(70, 70, 70);
-}
-
 #uploadForm [type=text] {
   display: block;
   margin-bottom: 8px;
   width: 98%;
 }
 
-#uploadPopbtn {
+#buttons {
   position: absolute;
   bottom: 1vmin;
   left: 1vmin;
   font-size: 1.2em;
+  width: calc(100vw - 1vmin);
 }
 
 dd {
   font-style: italic;
+  cursor: pointer;
+  padding-left: 60px;
+  position: relative;
+  right: 60px;
+  width: 100%;
 }
 
 dt {
@@ -93,13 +149,23 @@ dt {
 
 #songsList {
   position: absolute;
-  top: 1vh;
+  top: -13px;
+  left: 3px;
   max-height: 60vh;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
   z-index: 1;
 }
 
-#songsList dt:nth-child(even) {background-color: rgb(180, 180, 180);}
+.dt:nth-child(even) { background: rgb(200, 200, 200); }
+.dt[lmode=false]:nth-child(even) { background: rgb(40, 40, 40); }
+
+.dt[selected=true] {background: #b70909;}
+
+#clearall {
+  position: absolute;
+  right: 1vmin;
+}
 
 #popups {
   position: relative;
@@ -111,10 +177,29 @@ dt {
   display: none;
   margin: 0 auto;
   justify-content: center;
-  box-shadow: 10px 10px 15px gray, 5px -5px 8px gray, -5px 5px 8px gray, -5px -5px 8px gray;
+  box-shadow: 6px 6px 10px black, 5px -5px 8px black, -5px 5px 8px black, -5px -5px 8px black;
   padding: 4px;
   z-index: 4;
-  background-color: white;
+  background: white;
+}
+
+#shadow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background: rgba(0, 0, 0, .3);
+  z-index: 3;
+}
+
+@media screen and (max-width: 520px) {
+  #centersong {bottom: 20vh;}
+  #trackTime {width: 80vw; left: 10vw;}
+  #timeIndicate { 
+    height: 13px;
+    top: -3px;
+  }
 }
 
 .none {
@@ -123,4 +208,17 @@ dt {
 
 .inlineBlock {
   display: inline-block;
+}
+
+.initial {
+  display: initial;
+}
+
+.reverse {
+  color: gray;
+  background: black;
+}
+
+.invert {
+  filter: invert(100%);
 }
