--- a/public/main.css
+++ b/public/main.css
@@ -183,6 +183,34 @@ dt {
   background: white;
 }
 
+#contextMenu {
+  position: absolute;
+  background: white;
+  box-shadow: 5px 5px 10px lightgray;
+  z-index: 4;
+  min-width: 20vw;
+}
+
+#contextMenu ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+#contextMenu li {
+  padding: 2px;
+  cursor: pointer;
+}
+
+#contextMenu li:hover {
+  background: gray;
+}
+
+#editSong input {
+  display: block;
+  margin: 5px;
+}
+
 #shadow {
   position: absolute;
   top: 0;
