--- a/public/index.css
+++ b/public/index.css
@@ -162,6 +162,14 @@ dt {
 
 .dt[selected=true] {background: #b70909;}
 
+#songsbtn {
+  display: none;
+  /* width: 90vw;
+  left: 5vw;
+  position: absolute;
+  top: 5vw; */
+}
+
 #clearall {
   position: absolute;
   right: 1vmin;
@@ -231,7 +239,8 @@ dt {
 }
 
 @media screen and (max-width: 420px) {
-  #songsList {display: none;}
+  #songsList {display: none; width: 98vw; max-height: 80vh; overflow-y: scroll; -webkit-overflow-scrolling: touch;}
+  #songsbtn {display: initial;}
 }
 
 .none {
